src/lang/compiler/parser/LangParser.java
// Generated from E:/Projects/Java/intellij-ws/langparser/grammar\Lang.g4 by ANTLR 4.5.1
package lang.compiler.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, IDENT=49, STRING=50, REAL=51, SINT=52, UINT=53, 
		DIGIT=54, CHAR=55, UCHAR=56, LCHAR=57, WS=58, ENDL=59, LNCOM=60, BLKCOM=61;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_statement = 2, RULE_functionDefinition = 3, 
		RULE_arguments = 4, RULE_returnTypes = 5, RULE_variableDeclaration = 6, 
		RULE_datatype = 7, RULE_anonArguments = 8, RULE_lvalue = 9, RULE_rvalue = 10, 
		RULE_callArguments = 11, RULE_constant = 12, RULE_primitive = 13;
	public static final String[] ruleNames = {
		"program", "definition", "statement", "functionDefinition", "arguments", 
		"returnTypes", "variableDeclaration", "datatype", "anonArguments", "lvalue", 
		"rvalue", "callArguments", "constant", "primitive"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'{'", "'}'", "'return'", "','", "'if'", "'('", "')'", "'else'", 
		"'for'", "'while'", "'do'", "'foreach'", "'=:'", "'['", "'..'", "']'", 
		"'=>'", "'='", "':='", "'::='", "'@'", "'*='", "'/='", "'%='", "'+='", 
		"'-='", "'!'", "'*'", "'/'", "'%'", "'+'", "'-'", "'null'", "'true'", 
		"'false'", "'void'", "'bool'", "'s8'", "'s16'", "'s32'", "'s64'", "'u8'", 
		"'u16'", "'u32'", "'u64'", "'f32'", "'f64'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "IDENT", "STRING", "REAL", "SINT", "UINT", "DIGIT", "CHAR", "UCHAR", 
		"LCHAR", "WS", "ENDL", "LNCOM", "BLKCOM"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LangVisitor ) return ((LangVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(34);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__6:
			case T__36:
			case T__37:
			case T__38:
			case T__39:
			case T__40:
			case T__41:
			case T__42:
			case T__43:
			case T__44:
			case T__45:
			case T__46:
			case T__47:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(30); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(29);
					definition();
					}
					}
					setState(32); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << IDENT))) != 0) );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LangVisitor ) return ((LangVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(38);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				functionDefinition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(37);
				variableDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public RvalueContext value;
		public RvalueContext condition;
		public StatementContext trueBody;
		public StatementContext falseBody;
		public VariableDeclarationContext decl;
		public RvalueContext update;
		public StatementContext body;
		public RvalueContext collection;
		public Token var;
		public Token open;
		public Token min;
		public Token max;
		public Token close;
		public List<RvalueContext> rvalue() {
			return getRuleContexts(RvalueContext.class);
		}
		public RvalueContext rvalue(int i) {
			return getRuleContext(RvalueContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(LangParser.IDENT, 0); }
		public List<TerminalNode> SINT() { return getTokens(LangParser.SINT); }
		public TerminalNode SINT(int i) {
			return getToken(LangParser.SINT, i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LangVisitor ) return ((LangVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			setState(114);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				rvalue(0);
				setState(41);
				match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				match(T__1);
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__5) | (1L << T__6) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__27) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << IDENT) | (1L << STRING) | (1L << REAL) | (1L << SINT))) != 0)) {
					{
					{
					setState(44);
					statement();
					}
					}
					setState(49);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(50);
				match(T__2);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				variableDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				match(T__3);
				setState(53);
				((StatementContext)_localctx).value = rvalue(0);
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(54);
					match(T__4);
					setState(55);
					((StatementContext)_localctx).value = rvalue(0);
					}
					}
					setState(60);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(61);
				match(T__0);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(63);
				match(T__5);
				setState(64);
				match(T__6);
				setState(65);
				((StatementContext)_localctx).condition = rvalue(0);
				setState(66);
				match(T__7);
				setState(67);
				((StatementContext)_localctx).trueBody = statement();
				setState(70);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(68);
					match(T__8);
					setState(69);
					((StatementContext)_localctx).falseBody = statement();
					}
					break;
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(72);
				match(T__9);
				setState(73);
				match(T__6);
				setState(74);
				((StatementContext)_localctx).decl = variableDeclaration();
				setState(75);
				((StatementContext)_localctx).condition = rvalue(0);
				setState(76);
				match(T__0);
				setState(77);
				((StatementContext)_localctx).update = rvalue(0);
				setState(78);
				match(T__7);
				setState(79);
				((StatementContext)_localctx).body = statement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(81);
				match(T__10);
				setState(82);
				match(T__6);
				setState(83);
				((StatementContext)_localctx).condition = rvalue(0);
				setState(84);
				match(T__7);
				setState(85);
				((StatementContext)_localctx).body = statement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(87);
				match(T__11);
				setState(88);
				((StatementContext)_localctx).body = statement();
				setState(89);
				match(T__10);
				setState(90);
				match(T__6);
				setState(91);
				((StatementContext)_localctx).condition = rvalue(0);
				setState(92);
				match(T__7);
				setState(93);
				match(T__0);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(95);
				match(T__12);
				setState(96);
				match(T__6);
				setState(97);
				((StatementContext)_localctx).collection = rvalue(0);
				setState(98);
				match(T__13);
				setState(99);
				((StatementContext)_localctx).var = match(IDENT);
				setState(100);
				match(T__7);
				setState(101);
				((StatementContext)_localctx).body = statement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(103);
				match(T__12);
				setState(104);
				match(T__6);
				setState(105);
				((StatementContext)_localctx).open = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__6 || _la==T__14) ) {
					((StatementContext)_localctx).open = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(106);
				((StatementContext)_localctx).min = match(SINT);
				setState(107);
				match(T__15);
				setState(108);
				((StatementContext)_localctx).max = match(SINT);
				setState(109);
				((StatementContext)_localctx).close = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__7 || _la==T__16) ) {
					((StatementContext)_localctx).close = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(110);
				match(T__13);
				setState(111);
				((StatementContext)_localctx).var = match(IDENT);
				setState(112);
				match(T__7);
				setState(113);
				((StatementContext)_localctx).body = statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefinitionContext extends ParserRuleContext {
		public ArgumentsContext args;
		public ReturnTypesContext rvs;
		public Token name;
		public StatementContext body;
		public TerminalNode IDENT() { return getToken(LangParser.IDENT, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public ReturnTypesContext returnTypes() {
			return getRuleContext(ReturnTypesContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LangVisitor ) return ((LangVisitor<? extends T>)visitor).visitFunctionDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(T__6);
			setState(117);
			match(T__6);
			setState(119);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << IDENT))) != 0)) {
				{
				setState(118);
				((FunctionDefinitionContext)_localctx).args = arguments();
				}
			}

			setState(121);
			match(T__7);
			setState(122);
			match(T__17);
			setState(123);
			match(T__6);
			setState(125);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << IDENT))) != 0)) {
				{
				setState(124);
				((FunctionDefinitionContext)_localctx).rvs = returnTypes();
				}
			}

			setState(127);
			match(T__7);
			setState(128);
			match(T__7);
			setState(129);
			((FunctionDefinitionContext)_localctx).name = match(IDENT);
			setState(130);
			match(T__18);
			setState(131);
			match(T__1);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__5) | (1L << T__6) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__27) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << IDENT) | (1L << STRING) | (1L << REAL) | (1L << SINT))) != 0)) {
				{
				{
				setState(132);
				((FunctionDefinitionContext)_localctx).body = statement();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			match(T__2);
			setState(139);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public DatatypeContext type;
		public Token name;
		public ArgumentsContext next;
		public DatatypeContext datatype() {
			return getRuleContext(DatatypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(LangParser.IDENT, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LangVisitor ) return ((LangVisitor<? extends T>)visitor).visitArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arguments);
		try {
			setState(149);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				((ArgumentsContext)_localctx).type = datatype(0);
				setState(142);
				((ArgumentsContext)_localctx).name = match(IDENT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				((ArgumentsContext)_localctx).type = datatype(0);
				setState(145);
				((ArgumentsContext)_localctx).name = match(IDENT);
				setState(146);
				match(T__4);
				setState(147);
				((ArgumentsContext)_localctx).next = arguments();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnTypesContext extends ParserRuleContext {
		public DatatypeContext type;
		public ReturnTypesContext next;
		public DatatypeContext datatype() {
			return getRuleContext(DatatypeContext.class,0);
		}
		public ReturnTypesContext returnTypes() {
			return getRuleContext(ReturnTypesContext.class,0);
		}
		public ReturnTypesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnTypes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LangVisitor ) return ((LangVisitor<? extends T>)visitor).visitReturnTypes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnTypesContext returnTypes() throws RecognitionException {
		ReturnTypesContext _localctx = new ReturnTypesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_returnTypes);
		try {
			setState(156);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				((ReturnTypesContext)_localctx).type = datatype(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				((ReturnTypesContext)_localctx).type = datatype(0);
				setState(153);
				match(T__4);
				setState(154);
				((ReturnTypesContext)_localctx).next = returnTypes();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public DatatypeContext type;
		public Token name;
		public RvalueContext value;
		public Token isconst;
		public DatatypeContext datatype() {
			return getRuleContext(DatatypeContext.class,0);
		}
		public List<TerminalNode> IDENT() { return getTokens(LangParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(LangParser.IDENT, i);
		}
		public List<RvalueContext> rvalue() {
			return getRuleContexts(RvalueContext.class);
		}
		public RvalueContext rvalue(int i) {
			return getRuleContext(RvalueContext.class,i);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LangVisitor ) return ((LangVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variableDeclaration);
		int _la;
		try {
			setState(208);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				((VariableDeclarationContext)_localctx).type = datatype(0);
				setState(159);
				((VariableDeclarationContext)_localctx).name = match(IDENT);
				setState(162);
				_la = _input.LA(1);
				if (_la==T__18) {
					{
					setState(160);
					match(T__18);
					setState(161);
					((VariableDeclarationContext)_localctx).value = rvalue(0);
					}
				}

				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(164);
					match(T__4);
					setState(165);
					((VariableDeclarationContext)_localctx).name = match(IDENT);
					setState(168);
					_la = _input.LA(1);
					if (_la==T__18) {
						{
						setState(166);
						match(T__18);
						setState(167);
						((VariableDeclarationContext)_localctx).value = rvalue(0);
						}
					}

					}
					}
					setState(174);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(175);
				match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(177);
				((VariableDeclarationContext)_localctx).name = match(IDENT);
				setState(178);
				match(T__19);
				setState(179);
				((VariableDeclarationContext)_localctx).value = rvalue(0);
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(180);
					match(T__4);
					setState(181);
					((VariableDeclarationContext)_localctx).name = match(IDENT);
					setState(182);
					match(T__19);
					setState(183);
					((VariableDeclarationContext)_localctx).value = rvalue(0);
					}
					}
					setState(188);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(189);
				match(T__0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(192);
				switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
				case 1:
					{
					setState(191);
					((VariableDeclarationContext)_localctx).type = datatype(0);
					}
					break;
				}
				setState(194);
				((VariableDeclarationContext)_localctx).name = match(IDENT);
				setState(195);
				((VariableDeclarationContext)_localctx).isconst = match(T__20);
				setState(196);
				((VariableDeclarationContext)_localctx).value = rvalue(0);
				setState(203);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(197);
					match(T__4);
					setState(198);
					((VariableDeclarationContext)_localctx).name = match(IDENT);
					setState(199);
					match(T__20);
					setState(200);
					((VariableDeclarationContext)_localctx).value = rvalue(0);
					}
					}
					setState(205);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(206);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
